almost done w extensions structuring
